package co.edu.uniquindio.centroimpresion.model;

import java.io.Serializable;

public enum EstadoImpresora  implements Serializable {
	ACTIVO, INACTIVO, DESCONECTADO, VACIO, MANTENIMIENTO;
}
