@startuml Diagrama

skinparam Linetype ortho
skinparam style strictuml

class CentroImpresion {
    +agregarDocumento(code: String, titulo: String, prioridad: int, contenido: String): void
    +agregarImpresora(code: String, estaConectada: boolean): void
    +eliminarDocumento(code: String) : void
    +eliminarImpresora(code: String) : void
    +buscarDocumento(code: String) : Documento
    +buscarImpresora(code: String) : Impresora
    +imprimirDocumento(): void
}

enum EstadoImpresora <<enumeration>> {
    ACTIVO
    INACTIVO
    DESCONECTADO
    VACIA
    MANTENIMIENTO
}

abstract class Impresora <<abstract>> {
    -code : String
    -marca : String
    -paginasPorMinuto : double
    -esAColor : boolean
    +estaActiva() : boolean
    +agregarDocumento(code: String, titulo: String, prioridad: int, contenido: String): void
    +eliminarDocumento(code: String) : void
    +buscarDocumento(code: String) : Documento
    +<i>imprimirDocumento() : void
    +<i>imprimirDocumento(code: String) : void
    -throwIfNotActive() : void
}
class ImpresoraLaser {
    -paginasImpresas : int
    -duracionToner : int
    +recargarToner() : void
    +imprimirDocumento() : void
    +imprimirDocumento(code: String) : void
}

class ImpresoraCartucho {
    -volumenMaxCartucho : double
    -volumenCartucho : double
    -desgasteCartucho : double
    +recargarCartucho() :void
    +imprimirDocumento() : void
    +imprimirDocumento(code: String) : void
}

class Documento {
    -code : String
    -titulo : String
    -prioridad : int
    -contenido : String
    -fechaAgregado : LocalDateTime
    -fechaImpresion : LocalDateTime
    +obtenerCantPaginas() : int
    +estadoImpresion() : boolean
}
ImpresoraCartucho --|> Impresora
ImpresoraLaser --|> Impresora
CentroImpresion " 1 " o-- " * " Documento : -listaDocumentos
CentroImpresion " 1 " *-- " * " Impresora : -listaImpresoras
Impresora " 1 " o-- " * " Documento : -listaDocumentos

Impresora ". 1 " --> EstadoImpresora : -estado
@enduml